# pbt

./: $  .envrc  .gitignore  .treefmt.nix  Cargo.toml  README.md  ci.sh  deny.toml  flake.nix  pre-commit.sh  rust-toolchain.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml
.pbt/: 03251BAEB2522E03-alloc__vec__Vec_usize_.jsonl  06AB89EF9789FA5D-pbt__coverage_frontier__tests__ModelScenario.jsonl  1AD5C5D2EFD47711-pbt_tests__Foo.jsonl  67B84EC13F5D87D4-_usize__usize_.jsonl  9B97669C3B16C4CB-pbt_tests__LambdaCalculus.jsonl  FD3BDEE08E35BE4B-alloc__string__String.jsonl
benchmarks/quixbugs/: LICENSE  UNTRANSLATED.md
benchmarks/quixbugs/api/: Cargo.toml
benchmarks/quixbugs/api/src/: lib.rs
benchmarks/quixbugs/bench/: Cargo.toml
benchmarks/quixbugs/bench/benches/: quixbugs.rs
benchmarks/quixbugs/libraries/pbt/: Cargo.toml
benchmarks/quixbugs/libraries/pbt/src/: lib.rs
benchmarks/quixbugs/libraries/proptest/: Cargo.toml
benchmarks/quixbugs/libraries/proptest/src/: lib.rs
benchmarks/quixbugs/libraries/quickcheck/: Cargo.toml
benchmarks/quixbugs/libraries/quickcheck/src/: lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
pbt/: Cargo.toml
pbt-macro2/: Cargo.toml
pbt-macro2/src/: lib.rs
pbt-macros/: Cargo.toml
pbt-macros/src/: lib.rs
pbt-tests/: Cargo.toml  build.rs
pbt-tests/src/: coverage_spike.rs  lib.rs
pbt/benches/: generation.rs  lambda_calculus.rs
pbt/examples/: quadruple_u8_edge_cases.rs
pbt/src/: arbitrary.rs  ast_size.rs  cache.rs  coin_flips.rs  conjure.rs  construct.rs  count.rs  coverage_frontier.rs  edge_cases.rs  either.rs  error.rs  exhaust.rs  fields.rs  graph.rs  hash.rs  instantiability.rs  iter.rs  lib.rs  max.rs  memoize.rs  multiset.rs  ordered_multiset.rs  panic.rs  pbt.rs  persist.rs  pseudorandom.rs  reflection.rs  registration.rs  scc.rs  search.rs  shape.rs  shrink.rs  sigma.rs  size.rs  stats.rs  swarm.rs  test.rs  type_id.rs  unavoidability.rs  union_find.rs  (+1 more)
pbt/src/impls/: alloc.rs  arcs.rs  arrays.rs  basics.rs  bool.rs  booleans.rs  boxed.rs  boxes.rs  btrees.rs  chars.rs  floats.rs  hash_collections.rs  infallible.rs  integers.rs  ints.rs  json.rs  mod.rs  nonzero.rs  option.rs  options.rs  phantom.rs  phantoms.rs  rc.rs  result.rs  slice.rs  strings.rs  tuples.rs  units.rs  vec.rs  vecs.rs  vectors.rs  void.rs
pbt/src/impls/ints/: builtins.rs  in_between.rs  mod.rs
pbt/src/impls/vec/: decimate.rs  mod.rs  refine.rs
pbt/src/traits/: corner.rs  decimate.rs  mod.rs  refine.rs  rnd.rs  size.rs  weight.rs
scripts/: whole-program-coverage-spike.sh
src/: conjure.rs  count.rs  decompose.rs  lib.rs
src/impls/: arrays.rs  ints.rs  mod.rs  result.rs  tuples.rs  vec.rs
