[package]
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
name = "pbt"
publish = false
version = "0.1.0"
edition = "2024"


[dependencies]
futures = { version = "~0.3", default-features = false, features = ["alloc"] }
wyrand = { version = "~0.3", default-features = false }

[dev-dependencies]
tokio = { version = "~1.49", features = ["rt", "macros"] }


[lints.clippy]

# Deny all lints first (see <https://doc.rust-lang.org/stable/clippy/lints.html>):
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Then selectively ignore false negatives:
blanket_clippy_restriction_lints = "allow"
field_scoped_visibility_modifiers = "allow"
from_iter_instead_of_collect = "allow"
implicit_return = "allow"
inline_always = "allow"
map_err_ignore = "allow"
min_ident_chars = "allow"
mod_module_files = "allow"
needless_borrowed_reference = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
semicolon_if_nothing_returned = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_char_lifetime_names = "allow"
type_complexity = "allow"
