[workspace]
members = [
  "benchmarks/quixbugs/api",
  "benchmarks/quixbugs/bench",
  "benchmarks/quixbugs/libraries/pbt",
  "benchmarks/quixbugs/libraries/proptest",
  "benchmarks/quixbugs/libraries/quickcheck",
  "pbt",
  "pbt-macro2",
  "pbt-macros",
  "pbt-tests",
]
metadata.crane.name = "pbt"
resolver = "3"


[workspace.package]
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
categories = [
  "algorithms",
  "data-structures",
  "development-tools::testing",
  "mathematics",
  "security",
]
description = "High-throughput property-based testing with `derive`, swarm-testing, precise sizing, and full graph-theoretic type analysis over mutually inductive and uninstantiable types."
edition = "2024"
keywords = ["property", "proptest", "arbitrary", "fuzz", "test"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/wrsturgeon/pbt"
version = "0.5.11"


# Deny all lints first (see <https://doc.rust-lang.org/stable/clippy/lints.html>):

[workspace.lints.rust]

missing_docs = "deny"
warnings = "deny"

[workspace.lints.rustdoc]

broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
private_doc_tests = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"

[workspace.lints.clippy]

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Then selectively ignore false negatives:
blanket_clippy_restriction_lints = "allow"
field_scoped_visibility_modifiers = "allow"
implicit_return = "allow"
inline_modules = "allow"
min_ident_chars = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
needless_borrowed_reference = "allow"
pub_use = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"
wildcard-enum-match-arm = "allow"
