[package]
name = "pbt-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true


[lib]
proc-macro = true


[dependencies]
heck = "~0.5"
proc-macro2 = "~1.0"
quote = "~1.0"
syn = { version = "~2.0", features = ["full"] }

[dev-dependencies]
pbt = { path = "../pbt" }


[lints]
workspace = true
