[package]
name = "pbt-macro2"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
heck = "~0.5"
proc-macro2 = "~1.0"
quote = "~1.0"
syn = { version = "~2.0", features = ["extra-traits", "fold", "full"] }

[dev-dependencies]
pretty_assertions = "~1.4"
prettyplease = "~0.2"


[lints]
workspace = true
