[package]
name = "pbt-macros"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "~1.0"
quote = "~1.0"
syn = { version = "~2.0", features = ["extra-traits", "fold", "full"] }


[lints]
workspace = true
