[package]
name = "pbt-macros"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[lib]
proc-macro = true


[dependencies]
pbt-macro2 = { path = "../pbt-macro2", version = "~0" }
proc-macro2 = "~1.0"


[lints]
workspace = true
