[package]
name = "pbt-tests"
categories.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
pbt = { path = "../pbt" }
pretty_assertions = "~1.4"
