[package]
name = "pbt"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ahash = "~0.8"
getrandom = "~0.3"
mutants = "~0.0"
pbt-macros = { path = "../pbt-macros", version = "~0" }
pretty_assertions = "~1.4"
serde_json = "~1.0"
wyrand = "~0.4"

[lints]
workspace = true
