[package]
name = "pbt"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ahash = "~0.8"
getrandom = "~0.3"
num-bigint = { version = "~0.5", optional = true }
num-traits = { version = "0.2.19", optional = true }
pbt-macros = { path = "../pbt-macros", version = "~0" }
pretty_assertions = "~1.4"
serde_json = "~1.0"
wyrand = "~0.4"

[dev-dependencies]
criterion = "~0.8"
mutants = "~0.0"

[features]
num-bigint = ["dep:num-bigint", "dep:num-traits"]
serde_json = ["num-bigint", "serde_json/arbitrary_precision"]

[[bench]]
name = "lambda_calculus"
harness = false

[lints]
workspace = true
