[package]
name = "quixbugs-bench"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
criterion = "~0.8"
quixbugs-api = { path = "../api" }
quixbugs-pbt = { path = "../libraries/pbt" }
quixbugs-proptest = { path = "../libraries/proptest" }
quixbugs-quickcheck = { path = "../libraries/quickcheck" }

[[bench]]
name = "quixbugs"
harness = false

[lints]
workspace = true
