[package]
name = "quixbugs-pbt"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
pbt = { path = "../../../../pbt", version = "~0" }
quixbugs-api = { path = "../../api" }

[lints]
workspace = true
