[package]
name = "quixbugs-proptest"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
proptest = { version = "~1.11", default-features = false, features = ["std"] }
quixbugs-api = { path = "../../api" }

[dev-dependencies]
mutants = "~0.0"

[lints]
workspace = true
